--- a/android/app/src/main/res/layout/activity_add_admin_user.xml
+++ b/android/app/src/main/res/layout/activity_add_admin_user.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEEF5"
+    android:background="#FFFFFF"
     tools:context=".view.academicianView.AddAdminUserActivity">
 
     <!--Header-->
@@ -13,7 +13,7 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:cardBackgroundColor="#1A9AAF"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,13 +25,13 @@
 
         <ImageView
             android:id="@+id/gotoBack"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginTop="13dp"
             android:onClick="goToBack"
-            android:src="@drawable/baseline_arrow_back_ios_24"
+            android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
 
         <TextView
@@ -41,8 +41,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Admin Kullanıcı Ekle"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
+            android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
@@ -66,8 +66,9 @@
             <EditText
                 android:id="@+id/adminEmail"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="52dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="7dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Email Giriniz"
@@ -81,11 +82,12 @@
             <Button
                 android:id="@+id/addAdminUser"
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
+                android:layout_height="52dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="7dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
-                android:backgroundTint="#1A9AAF"
+                android:backgroundTint="#124090"
                 android:elevation="8dp"
                 android:text="Kaydet"
                 android:textColor="#FFFFFF"
@@ -98,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
+                android:layout_marginStart="7dp"
                 android:text="Yöneticiler"
                 android:textColor="#000000"
                 android:textSize="15sp"
