--- a/android/app/src/main/res/layout/activity_firm_info.xml
+++ b/android/app/src/main/res/layout/activity_firm_info.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEEF5"
+    android:background="#FFFFFF"
     tools:context=".view.academicianView.FirmInfoActivity">
 
     <!--Header-->
@@ -13,7 +13,7 @@
         android:id="@+id/materialCardView4"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:cardBackgroundColor="#1a9AAF"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,13 +25,13 @@
 
         <ImageView
             android:id="@+id/gotoAcademician"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginTop="13dp"
             android:onClick="goToProfile"
-            android:src="@drawable/baseline_arrow_back_ios_24"
+            android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
 
         <TextView
@@ -41,8 +41,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Firma Bilgisi Ve Çalışma Alanı"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
+            android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
@@ -75,18 +75,17 @@
                 android:layout_marginStart="15dp"
                 android:text="Yeni Firma Ekle"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 tools:layout_editor_absoluteX="36dp"
                 tools:layout_editor_absoluteY="159dp" />
 
-
             <EditText
                 android:id="@+id/firmName"
-                android:layout_width="360dp"
-                android:layout_height="54dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="10dp"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Firma Adı"
@@ -107,8 +106,8 @@
 
                 <EditText
                     android:id="@+id/firmWorkArea"
-                    android:layout_width="325dp"
-                    android:layout_height="54dp"
+                    android:layout_width="330dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginVertical="5dp"
                     android:layout_marginLeft="10dp"
@@ -125,12 +124,12 @@
 
                 <ImageView
                     android:id="@+id/addFirmWorkArea"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginHorizontal="9dp"
                     android:contentDescription="Ekle"
-                    android:src="@drawable/baseline_add_circle_24" />
+                    android:src="@drawable/add_circle_black_icon" />
 
 
             </LinearLayout>
@@ -139,6 +138,7 @@
                 android:id="@+id/workAreaTagContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
@@ -148,14 +148,14 @@
                 app:justifyContent="center"
                 tools:ignore="MissingClass" />
 
-
             <Button
                 android:id="@+id/addFirmInfo"
-                android:layout_width="360dp"
-                android:layout_height="55dp"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="7dp"
-                android:backgroundTint="#1A9AAF"
+                android:backgroundTint="#124090"
                 android:elevation="8dp"
                 android:text="Ekle"
                 android:textColor="#FFFFFF"
@@ -176,7 +176,7 @@
                 android:layout_marginStart="15dp"
                 android:text="Eklenmiş Firmalar"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -184,7 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:layout_marginHorizontal="14dp"
+                android:layout_marginHorizontal="5dp"
                 android:layout_marginBottom="400dp"
                 android:orientation="vertical">
 
