--- a/android/app/src/main/res/layout/activity_industry_info.xml
+++ b/android/app/src/main/res/layout/activity_industry_info.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".view.industryView.IndustryInfoActivity">
 
     <!-- Header -->
@@ -13,7 +13,7 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:cardBackgroundColor="#1A9AAF"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,15 +25,14 @@
 
         <ImageView
             android:id="@+id/backToProfile"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:onClick="backToProfile"
-            android:src="@drawable/baseline_arrow_back_ios_24"
+            android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
-
 
         <TextView
             android:layout_width="match_parent"
@@ -42,9 +41,10 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Firma Bilgileri"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
+            android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold" />
+
     </com.google.android.material.card.MaterialCardView>
 
     <!--ScrollView-->
@@ -57,95 +57,97 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/materialCardView">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="top"
-        android:orientation="vertical"
-        android:paddingTop="16dp"
-        android:paddingBottom="32dp">
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="100dp"
-            android:layout_marginStart="20dp"
-            android:text="Firma Adı"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:layout_gravity="center_horizontal"
+            android:gravity="top"
+            android:orientation="vertical"
+            android:paddingTop="16dp"
+            android:paddingBottom="32dp">
 
-        <EditText
-            android:id="@+id/industryFirmName"
-            android:layout_width="360dp"
-            android:layout_height="54dp"
-            android:layout_gravity="center"
-            android:layout_marginVertical="7dp"
-            android:background="@drawable/edittext_bg"
-            android:hint="Firma Adı"
-            android:inputType="text"
-            android:padding="12dp"
-            android:textColor="#000000"
-            android:textColorHint="#999999"
-            android:textSize="16sp"
-            android:textStyle="normal"
-            tools:layout_editor_absoluteX="35dp"
-            tools:layout_editor_absoluteY="211dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="100dp"
+                android:text="Firma Adı"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="20dp"
-            android:text="Çalışma Alanı"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+            <EditText
+                android:id="@+id/industryFirmName"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="7dp"
+                android:background="@drawable/edittext_bg"
+                android:hint="Firma Adı"
+                android:inputType="text"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                tools:layout_editor_absoluteX="35dp"
+                tools:layout_editor_absoluteY="211dp" />
 
-        <EditText
-            android:id="@+id/industryFirmWorkArea"
-            android:layout_width="360dp"
-            android:layout_height="54dp"
-            android:layout_gravity="center"
-            android:layout_marginVertical="7dp"
-            android:background="@drawable/edittext_bg"
-            android:hint="Çalışma Alanı"
-            android:inputType="text"
-            android:padding="12dp"
-            android:textColor="#000000"
-            android:textColorHint="#999999"
-            android:textSize="16sp"
-            android:textStyle="normal"
-            tools:layout_editor_absoluteX="35dp"
-            tools:layout_editor_absoluteY="211dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:text="Çalışma Alanı"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/saveIndustryInfo"
-            android:layout_width="360dp"
-            android:layout_height="55dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="400dp"
-            android:backgroundTint="#4CAF50"
-            android:elevation="8dp"
-            android:onClick="saveIndustryInfo"
-            android:text="Kaydet"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:translationZ="4dp"
-            app:cornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="OnClick"
-            tools:layout_editor_absoluteY="368dp" />
+            <EditText
+                android:id="@+id/industryFirmWorkArea"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="7dp"
+                android:background="@drawable/edittext_bg"
+                android:hint="Çalışma Alanı"
+                android:inputType="text"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                tools:layout_editor_absoluteX="35dp"
+                tools:layout_editor_absoluteY="211dp" />
 
+            <Button
+                android:id="@+id/saveIndustryInfo"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="400dp"
+                android:backgroundTint="#124090"
+                android:elevation="8dp"
+                android:onClick="saveIndustryInfo"
+                android:text="Kaydet"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:translationZ="4dp"
+                app:cornerRadius="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="OnClick"
+                tools:layout_editor_absoluteY="368dp" />
 
-    </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
