--- a/android/app/src/main/res/layout/activity_request_detail_student.xml
+++ b/android/app/src/main/res/layout/activity_request_detail_student.xml
@@ -70,6 +70,7 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="2dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 app:cardBackgroundColor="#FFFFFF"
@@ -234,6 +235,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
+                android:layout_marginHorizontal="2dp"
                 android:layout_marginBottom="24dp"
                 app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="12dp"
