--- a/android/app/src/main/res/layout/fragment_pending_request_academician.xml
+++ b/android/app/src/main/res/layout/fragment_pending_request_academician.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEEF5"
+    android:background="#FFFFFF"
     tools:context=".view.academicianView.PendingRequestAcademicianFragment">
 
     <!-- Header -->
@@ -12,7 +12,7 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:cardBackgroundColor="#1A9AAF"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="7dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,8 +29,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Bekleyen Talepler"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
+            android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
