--- a/android/app/src/main/res/layout/item_request_card.xml
+++ b/android/app/src/main/res/layout/item_request_card.xml
@@ -39,12 +39,18 @@
 
                 <TextView
                     android:id="@+id/requestTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:singleLine="true"
                     android:text="Talep Başlığı"
                     android:textColor="#000000"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_toStartOf="@id/deleteIcon"
+                    android:layout_toLeftOf="@id/deleteIcon"
+                    android:layout_alignParentStart="true" />
 
                 <ImageView
                     android:id="@+id/deleteIcon"
@@ -64,9 +70,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="4dp"
-                android:ellipsize="end"
                 android:maxLines="2"
-                android:text="Talep açıklaması buraya gelecek..."
+                android:scrollHorizontally="false"
+                android:singleLine="false"
+                android:ellipsize="end"
+                android:text="Talep açıklaması..."
                 android:textColor="#666666"
                 android:textSize="13sp" />
 
@@ -79,22 +87,25 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:text="📆"
-                    android:tint="#888888" />
+                    android:textSize="13sp"
+                    android:textColor="#888888" />
 
                 <TextView
                     android:id="@+id/requestDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
                     android:text="22.07.2025"
                     android:textColor="#666666"
                     android:textSize="13sp" />
             </LinearLayout>
 
-            <!--KATEGORİLER-->
+            <!-- KATEGORİLER -->
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -115,5 +126,6 @@
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
+
 
 
