--- a/android/app/src/main/res/layout/stat_card_summary.xml
+++ b/android/app/src/main/res/layout/stat_card_summary.xml
@@ -2,9 +2,10 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="1dp"
     android:layout_marginBottom="16dp"
     card_view:cardCornerRadius="12dp"
-    card_view:cardElevation="4dp"
+    card_view:cardElevation="2dp"
     card_view:cardBackgroundColor="#FFFFFF">
 
     <LinearLayout
@@ -58,7 +59,7 @@
             <ImageView
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:src="@drawable/baseline_business_24" />
+                android:src="@drawable/firm_icon" />
 
             <TextView
                 android:id="@+id/industryCountText"
@@ -89,7 +90,7 @@
             <ImageView
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:src="@drawable/baseline_check_circle_24" />
+                android:src="@drawable/baseline_check_circle_outline_24" />
 
             <TextView
                 android:id="@+id/approvedCountText"
