--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/pendingRequestAcademicianFragment"
-        android:icon="@drawable/baseline_format_list_bulleted_24"/>
+        android:icon="@drawable/list_icon"/>
 
     <item
         android:id="@+id/requestAcademicianFragment"
-        android:icon="@drawable/baseline_add_24"/>
+        android:icon="@drawable/add_icon"/>
 
     <item
         android:id="@+id/previewFragment"
-        android:icon="@drawable/baseline_home_24"/>
+        android:icon="@drawable/home_icon"/>
 
     <item
         android:id="@+id/profileFragment"
-        android:icon="@drawable/baseline_person_24"/>
+        android:icon="@drawable/person_profile"/>
 </menu>
