--- a/android/app/src/main/res/menu/bottom_nav_menu_student.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu_student.xml
@@ -3,10 +3,10 @@
 
     <item
         android:id="@+id/fragmentCreateRequestStudent"
-        android:icon="@drawable/baseline_add_24" />
+        android:icon="@drawable/add_icon" />
 
     <item
         android:id="@+id/fragmentStudentProfile"
-        android:icon="@drawable/baseline_person_24" />
+        android:icon="@drawable/person_profile" />
 
 </menu>
